Rename all multi-precision instructions.
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   docs/implementation/verify.tex
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/gtkwave/formal-flow-view.gtkw
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_common.vh
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   rtl/coprocessor/scarv_cop_top.v
	renamed:    verif/formal/fml_chk_instr_acc1_mp.v -> verif/formal/fml_chk_instr_macc_1.v
	renamed:    verif/formal/fml_chk_instr_acc2_mp.v -> verif/formal/fml_chk_instr_macc_2.v
	renamed:    verif/formal/fml_chk_instr_add2_mp.v -> verif/formal/fml_chk_instr_madd_2.v
	renamed:    verif/formal/fml_chk_instr_add3_mp.v -> verif/formal/fml_chk_instr_madd_3.v
	renamed:    verif/formal/fml_chk_instr_equ_mp.v -> verif/formal/fml_chk_instr_mequ.v
	renamed:    verif/formal/fml_chk_instr_gtu_mp.v -> verif/formal/fml_chk_instr_mgte.v
	renamed:    verif/formal/fml_chk_instr_ltu_mp.v -> verif/formal/fml_chk_instr_mlte.v
	renamed:    verif/formal/fml_chk_instr_mac_mp.v -> verif/formal/fml_chk_instr_mmul_1.v
	renamed:    verif/formal/fml_chk_instr_sll_mp.v -> verif/formal/fml_chk_instr_msll.v
	renamed:    verif/formal/fml_chk_instr_slli_mp.v -> verif/formal/fml_chk_instr_msll_i.v
	renamed:    verif/formal/fml_chk_instr_srl_mp.v -> verif/formal/fml_chk_instr_msrl.v
	renamed:    verif/formal/fml_chk_instr_srli_mp.v -> verif/formal/fml_chk_instr_msrl_i.v
	renamed:    verif/formal/fml_chk_instr_sub2_mp.v -> verif/formal/fml_chk_instr_msub_2.v
	renamed:    verif/formal/fml_chk_instr_sub3_mp.v -> verif/formal/fml_chk_instr_msub_3.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/20-add2-mp.S
	modified:   verif/unit/21-add3-mp.S
	modified:   verif/unit/22-slli-mp.S
	modified:   verif/unit/23-sll-mp.S
	mo

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -146,12 +146,12 @@ control the rate of information flow between the CPU and the COP.
 }
 \SIGNALO{5}{cop\_waddr}{
     The RISC-V GPR destination register address used by the COP instructions
-    \ASM{XCR2GPR, EQU.mp, LTU.MP} and \ASM{GTU.mp}.
+    \ASM{XCR2GPR, EQU.mp, MLTE} and \ASM{GTU.mp}.
 }
 \SIGNALO{32}{cop\_wdata}{
     The data to be written to the RISC-V GPR register addressed by 
     {\tt cop\_waddr} by the 
-    \ASM{XCR2GPR, EQU.mp, LTU.MP} and \ASM{GTU.mp}
+    \ASM{XCR2GPR, EQU.mp, MLTE} and \ASM{GTU.mp}
     instructions.
 }
 \SIGNALO{3}{cop\_result}{
