Renaming changes on documentation
- making sure mnemonics and references are correct

 On branch dev/renaming
 Changes to be committed:
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/spec-instr.tex

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -20,56 +20,56 @@ Class                 & Syntax                  & Section                       
                       & \XCSYNTAXUSE{GPR2XCR}    & \REFSEC{sec:spec:instr:GPR2XCR}    \\
                       & \XCSYNTAXUSE{CMOV.cr}   & \REFSEC{sec:spec:instr:CMOV.cr}   \\
                       & \XCSYNTAXUSE{CMOVN.cr}  & \REFSEC{sec:spec:instr:CMOVN.cr}  \\
-                      & \XCSYNTAXUSE{LBU.cr}    & \REFSEC{sec:spec:instr:LBU.cr}    \\
-                      & \XCSYNTAXUSE{LHU.cr}    & \REFSEC{sec:spec:instr:LHU.cr}    \\
-                      & \XCSYNTAXUSE{LW.cr}     & \REFSEC{sec:spec:instr:LW.cr}     \\
-                      & \XCSYNTAXUSE{SB.cr}     & \REFSEC{sec:spec:instr:SB.cr}     \\
-                      & \XCSYNTAXUSE{SH.cr}     & \REFSEC{sec:spec:instr:SH.cr}     \\
-                      & \XCSYNTAXUSE{SW.cr}     & \REFSEC{sec:spec:instr:SW.cr}     \\
-\hline
-\multirow{ 2}{*}{2.1} & \XCSYNTAXUSE{RSEED.cr}  & \REFSEC{sec:spec:instr:RSEED.cr}  \\
-                      & \XCSYNTAXUSE{RSAMP.cr}  & \REFSEC{sec:spec:instr:RSAMP.cr}  \\
-\hline
+                      & \XCSYNTAXUSE{LD.BU}     & \REFSEC{sec:spec:instr:LD.BU}     \\
+                      & \XCSYNTAXUSE{LD.HU}     & \REFSEC{sec:spec:instr:LD.HU}     \\
+                      & \XCSYNTAXUSE{LD.W}      & \REFSEC{sec:spec:instr:LD.W}      \\
+                      & \XCSYNTAXUSE{ST.B}      & \REFSEC{sec:spec:instr:ST.B}      \\
+                      & \XCSYNTAXUSE{ST.H}      & \REFSEC{sec:spec:instr:ST.H}      \\
+                      & \XCSYNTAXUSE{ST.W}      & \REFSEC{sec:spec:instr:ST.W}      \\
+\hline                                                                             
+\multirow{ 2}{*}{2.1} & \XCSYNTAXUSE{RNGSEED}   & \REFSEC{sec:spec:instr:RNGSEED}   \\
+                      & \XCSYNTAXUSE{RNGSAMP}   & \REFSEC{sec:spec:instr:RNGSAMP}   \\
+\hline                                                                             
 \multirow{ 4}{*}{2.2} & \XCSYNTAXUSE{SCATTER.b} & \REFSEC{sec:spec:instr:SCATTER.b} \\
                       & \XCSYNTAXUSE{SCATTER.h} & \REFSEC{sec:spec:instr:SCATTER.h} \\
                       & \XCSYNTAXUSE{GATHER.b}  & \REFSEC{sec:spec:instr:GATHER.b}  \\
                       & \XCSYNTAXUSE{GATHER.h}  & \REFSEC{sec:spec:instr:GATHER.h}  \\
-\hline
-\multirow{ 7}{*}{2.2} & \XCSYNTAXUSE{LLI.cr}    & \REFSEC{sec:spec:instr:LLI.cr}    \\
-                      & \XCSYNTAXUSE{LUI.cr}    & \REFSEC{sec:spec:instr:LUI.cr}    \\
-                      & \XCSYNTAXUSE{BOP.cr}    & \REFSEC{sec:spec:instr:BOP.cr}    \\
-                      & \XCSYNTAXUSE{EXT.cr}    & \REFSEC{sec:spec:instr:EXT.cr}    \\
-                      & \XCSYNTAXUSE{INS.cr}    & \REFSEC{sec:spec:instr:INS.cr}    \\
-                      & \XCSYNTAXUSE{LMIX.cr}   & \REFSEC{sec:spec:instr:LMIX.cr}   \\
-                      & \XCSYNTAXUSE{HMIX.cr}   & \REFSEC{sec:spec:instr:HMIX.cr}   \\
-\hline
-\multirow{12}{*}{2.3} & \XCSYNTAXUSE{ADD.px}    & \REFSEC{sec:spec:instr:ADD.px}    \\
-                      & \XCSYNTAXUSE{SUB.px}    & \REFSEC{sec:spec:instr:SUB.px}    \\
-                      & \XCSYNTAXUSE{MUL.px}    & \REFSEC{sec:spec:instr:MUL.px}    \\
-                      & \XCSYNTAXUSE{SLL.px}    & \REFSEC{sec:spec:instr:SLL.px}    \\
-                      & \XCSYNTAXUSE{SLLI.px}   & \REFSEC{sec:spec:instr:SLLI.px}   \\
-                      & \XCSYNTAXUSE{SRL.px}    & \REFSEC{sec:spec:instr:SRL.px}    \\
-                      & \XCSYNTAXUSE{SRLI.px}   & \REFSEC{sec:spec:instr:SRLI.px}   \\
-                      & \XCSYNTAXUSE{ROT.px}    & \REFSEC{sec:spec:instr:ROT.px}    \\
-                      & \XCSYNTAXUSE{ROTI.px}   & \REFSEC{sec:spec:instr:ROTI.px}   \\
-                      & \XCSYNTAXUSE{PPERM.W}    & \REFSEC{sec:spec:instr:PPERM.W}    \\
-                      & \XCSYNTAXUSE{TWID.Nx}   & \REFSEC{sec:spec:instr:TWID.Nx}   \\
-                      & \XCSYNTAXUSE{TWID.Cx}   & \REFSEC{sec:spec:instr:TWID.Cx}   \\
-\hline
-\multirow{14}{*}{2.4} & \XCSYNTAXUSE{ADD2.mp}   & \REFSEC{sec:spec:instr:ADD2.mp}   \\
-                      & \XCSYNTAXUSE{ADD3.mp}   & \REFSEC{sec:spec:instr:ADD3.mp}   \\
-                      & \XCSYNTAXUSE{SUB2.mp}   & \REFSEC{sec:spec:instr:SUB2.mp}   \\
-                      & \XCSYNTAXUSE{SUB3.mp}   & \REFSEC{sec:spec:instr:SUB3.mp}   \\
-                      & \XCSYNTAXUSE{ACC1.mp}   & \REFSEC{sec:spec:instr:ACC1.mp}   \\
-                      & \XCSYNTAXUSE{ACC2.mp}   & \REFSEC{sec:spec:instr:ACC2.mp}   \\
-                      & \XCSYNTAXUSE{MAC.mp}    & \REFSEC{sec:spec:instr:MAC.mp}    \\
-                      & \XCSYNTAXUSE{SLL.mp}    & \REFSEC{sec:spec:instr:SLL.mp}    \\
-                      & \XCSYNTAXUSE{SLLI.mp}   & \REFSEC{sec:spec:instr:SLLI.mp}   \\
-                      & \XCSYNTAXUSE{SRL.mp}    & \REFSEC{sec:spec:instr:SRL.mp}    \\
-                      & \XCSYNTAXUSE{SRLI.mp}   & \REFSEC{sec:spec:instr:SRLI.mp}   \\
-                      & \XCSYNTAXUSE{EQU.mp}    & \REFSEC{sec:spec:instr:EQU.mp}    \\
-                      & \XCSYNTAXUSE{LTU.mp}    & \REFSEC{sec:spec:instr:LTU.mp}    \\
-                      & \XCSYNTAXUSE{GTU.mp}    & \REFSEC{sec:spec:instr:GTU.mp}    \\
+\hline                                                                             
+\multirow{ 7}{*}{2.2} & \XCSYNTAXUSE{LD.HI}     & \REFSEC{sec:spec:instr:LD.HI}     \\
+                      & \XCSYNTAXUSE{LD.LI}     & \REFSEC{sec:spec:instr:LD.LI}     \\
+                      & \XCSYNTAXUSE{BOP}       & \REFSEC{sec:spec:instr:BOP}       \\
+                      & \XCSYNTAXUSE{EXT}       & \REFSEC{sec:spec:instr:EXT}       \\
+                      & \XCSYNTAXUSE{INS}       & \REFSEC{sec:spec:instr:INS}       \\
+                      & \XCSYNTAXUSE{MIX.l}     & \REFSEC{sec:spec:instr:MIX.l}     \\
+                      & \XCSYNTAXUSE{MIX.h}     & \REFSEC{sec:spec:instr:MIX.h}     \\
+\hline                                                                             
+\multirow{12}{*}{2.3} & \XCSYNTAXUSE{PADD}      & \REFSEC{sec:spec:instr:PADD}      \\
+                      & \XCSYNTAXUSE{PSUB}      & \REFSEC{sec:spec:instr:PSUB}      \\
+                      & \XCSYNTAXUSE{PMUL.l}    & \REFSEC{sec:spec:instr:PMUL.l}    \\
+                      & \XCSYNTAXUSE{PSLL}      & \REFSEC{sec:spec:instr:PSLL}      \\
+                      & \XCSYNTAXUSE{PSLL.i}    & \REFSEC{sec:spec:instr:PSLL.i}    \\
+                      & \XCSYNTAXUSE{PSRL}      & \REFSEC{sec:spec:instr:PSRL}      \\
+                      & \XCSYNTAXUSE{PSRL.i}    & \REFSEC{sec:spec:instr:PSRL.i}    \\
+                      & \XCSYNTAXUSE{PROT}      & \REFSEC{sec:spec:instr:PROT}      \\
+                      & \XCSYNTAXUSE{PROT.i}    & \REFSEC{sec:spec:instr:PROT.i}    \\
+                      & \XCSYNTAXUSE{PPERM.W}   & \REFSEC{sec:spec:instr:PPERM.W}    \\
+                      & \XCSYNTAXUSE{PPERM.Hx}  & \REFSEC{sec:spec:instr:PPERM.Hx}  \\
+                      & \XCSYNTAXUSE{PPERM.Bx}  & \REFSEC{sec:spec:instr:PPERM.Bx}  \\
+\hline                                                                             
+\multirow{14}{*}{2.4} & \XCSYNTAXUSE{MADD.2}    & \REFSEC{sec:spec:instr:MADD.2}    \\
+                      & \XCSYNTAXUSE{MADD.3}    & \REFSEC{sec:spec:instr:MADD.3}    \\
+                      & \XCSYNTAXUSE{MSUB.2}    & \REFSEC{sec:spec:instr:MSUB.2}    \\
+                      & \XCSYNTAXUSE{MSUB.3}    & \REFSEC{sec:spec:instr:MSUB.3}    \\
+                      & \XCSYNTAXUSE{MACC.1}    & \REFSEC{sec:spec:instr:MACC.1}    \\
+                      & \XCSYNTAXUSE{MACC.2}    & \REFSEC{sec:spec:instr:MACC.2}    \\
+                      & \XCSYNTAXUSE{MMUL.1}    & \REFSEC{sec:spec:instr:MMUL.1}    \\
+                      & \XCSYNTAXUSE{MSLL}      & \REFSEC{sec:spec:instr:MSLL}      \\
+                      & \XCSYNTAXUSE{MSLL.i}    & \REFSEC{sec:spec:instr:MSLL.i}    \\
+                      & \XCSYNTAXUSE{MSRL}      & \REFSEC{sec:spec:instr:MSRL}      \\
+                      & \XCSYNTAXUSE{MSRL.i}    & \REFSEC{sec:spec:instr:MSRL.i}    \\
+                      & \XCSYNTAXUSE{MEQU}      & \REFSEC{sec:spec:instr:MEQU}      \\
+                      & \XCSYNTAXUSE{MLTE}      & \REFSEC{sec:spec:instr:MLTE}      \\
+                      & \XCSYNTAXUSE{MGTE}      & \REFSEC{sec:spec:instr:MGTE}      \\
 \end{longtable}
 \end{center}
 \vspace*{\fill}
