Rename cmov instructions to remove .cr suffix
 On branch dev/renaming
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/appx-syntax.tex
	modified:   docs/specification/spec-instr.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   flow/icarus/waves-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	renamed:    verif/formal/fml_chk_instr_cmov_cr.v -> verif/formal/fml_chk_instr_cmov.v
	renamed:    verif/formal/fml_chk_instr_cmovn_cr.v -> verif/formal/fml_chk_instr_cmovn.v
	modified:   verif/model/model_ise.v
	modified:   verif/unit/01-cmov.S

--- a/docs/specification/appx-syntax.tex
+++ b/docs/specification/appx-syntax.tex
@@ -18,8 +18,8 @@ Class                 & Syntax                  & Section                       
 \endfoot
 \multirow{10}{*}{1}   & \XCSYNTAXUSE{XCR2GPR}    & \REFSEC{sec:spec:instr:XCR2GPR}    \\
                       & \XCSYNTAXUSE{GPR2XCR}    & \REFSEC{sec:spec:instr:GPR2XCR}    \\
-                      & \XCSYNTAXUSE{CMOV.cr}   & \REFSEC{sec:spec:instr:CMOV.cr}   \\
-                      & \XCSYNTAXUSE{CMOVN.cr}  & \REFSEC{sec:spec:instr:CMOVN.cr}  \\
+                      & \XCSYNTAXUSE{CMOV}      & \REFSEC{sec:spec:instr:CMOV}      \\
+                      & \XCSYNTAXUSE{CMOVN}     & \REFSEC{sec:spec:instr:CMOVN}     \\
                       & \XCSYNTAXUSE{LD.BU}     & \REFSEC{sec:spec:instr:LD.BU}     \\
                       & \XCSYNTAXUSE{LD.HU}     & \REFSEC{sec:spec:instr:LD.HU}     \\
                       & \XCSYNTAXUSE{LD.W}      & \REFSEC{sec:spec:instr:LD.W}      \\
