--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -30,8 +30,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{CMOV.cr}{crd, crs1, crs2}{
-  \ienccmovcr
+\XCINSTR{CMOV}{crd, crs1, crs2}{
+  \ienccmov
 }{
   Conditionally move one $\XCR$ register to another.
 }{
@@ -42,8 +42,8 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{CMOVN.cr}{crd, crs1, crs2}{
-  \ienccmovncr
+\XCINSTR{CMOVN}{crd, crs1, crs2}{
+  \ienccmov
 }{
   Conditionally move one $\XCR$ register to another.
 }{
