--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -58,7 +58,7 @@ Bristol, BS8 1UB, United Kingdom.\\
 \section{Introduction}
 
 This document contains the design specification for an {\em area optimised}
-implementation of the proposed RISC-V Crypto ISE (C-ISE).
+implementation of the proposed RISC-V \ISE.
 
 The implementation takes the form of a Co-processor (COP), which is designed
 to make it extremely easy to re-use, and integrate with existing RISC-V cores
@@ -95,17 +95,22 @@ design constraints, and still have a drop-in compatible design.
 
 \SIGNALS{
 \SIGNALI{1}{g\_clk}{The global input clock signal.}
-\SIGNALO{1}{g\_clk\_req}{
-COP clock request signal. The COP sets this signal high when it needs a
-clock signal, and clears it when it does not. Used to indicate the COP
-is idle.
-}
 \SIGNALI{1}{g\_resetn}{Synchronous, active low reset signal.}
 }{}{tab:sigs-clk-reset}
 
 \subsection{Status Interface}
 
-TBD
+This interface is used {\em only} for verification purposes. It contains
+signals from inside the design hierarchy that are exposed as part of the
+formal verification flow.
+
+It is principally made up of:
+
+\begin{itemize}
+\item General purpose register values.
+\item General purpose register read/write port information.
+\item Random number generator value and sample trigger signals.
+\end{itemize}
 
 \subsection{CPU/COP Interface}
 \label{sec:cpu-cop-if}
@@ -333,12 +338,12 @@ Rules for signal naming are as follows:
     block they are associated with.
 \item Input signal prefixes may refer not to the block they belong, but
     to the block from which the input is sourced.
-\item Output signals always begin with the source block prefix.
+\item Output signals of a block always begin with the source block prefix.
 \item All signals are written in {\em lower case}, with underscores ({\tt \_})
-    to separate words.
+    between separate words.
 \end{itemize}
 
-\subsection{Instruction Decode Block}
+\subsection{Instruction Decode Block ({\tt scarv\_cop\_idecode})}
 
 This block is responsible for taking the 32-bit encoded instructions from
 the \cpucopif and extracting the relevent fields for each instruction. This
@@ -393,15 +398,15 @@ decoded output fields will be valid for every instruction.
     \begin{itemize}
     \item Load/Store Offsets.
     \item Shift amounts for packed and multi-precision instructions.
-    \item LUT values for {\tt BOP.cr}
-    \item Positions and sizes for bitfield instructions {\tt INS.cr}
-          and {\tt EXT.cr}.
-    \item {\tt LLI.cr} and {\tt LUI.cr} Immediates.
-    \item Twiddle positions.
+    \item LUT values for {\tt xc.bop}
+    \item Positions and sizes for bitfield instructions {\tt xc.ins}
+          and {\tt xc.ext}.
+    \item {\tt xc.ld.hi} and {\tt xc.ld.li} Immediates.
+    \item Permutation types/positions.
     \end{itemize}
 
     For load and store offsets, the encoded immediates are also
-    sign-extended.
+    sign-extended to their complete 32-bit value.
 }
 \SIGNALO{1}{id\_wb\_h}{
     Halfword write index for loads and stores. For instructions which can
@@ -421,13 +426,13 @@ decoded output fields will be valid for every instruction.
 \toprule
 {\bf \SIGREF{id\_class} code} & {\bf Instruction Class} \\
 \midrule
- {\tt 0b???}  & Packed Arithmetic \\
- {\tt 0b???}  & Twiddle           \\
- {\tt 0b???}  & Load / Store      \\
- {\tt 0b???}  & Random            \\
- {\tt 0b???}  & Move              \\
- {\tt 0b???}  & Multi-precision   \\
- {\tt 0b???}  & Bitwise           \\
+ {\tt 3'b001}  & Packed Arithmetic \\
+ {\tt 3'b010}  & Twiddle           \\
+ {\tt 3'b011}  & Load / Store      \\
+ {\tt 3'b100}  & Random            \\
+ {\tt 3'b101}  & Move              \\
+ {\tt 3'b110}  & Multi-precision   \\
+ {\tt 3'b111}  & Bitwise           \\
  \bottomrule
 \end{tabular}
 \caption{Encodings for the \SIGREF{id\_class} signal. All other encoding
@@ -435,12 +440,21 @@ values are reserved and should not be used.}
 \label{tab:id-class-encodings}
 \end{table}
 
+The actual instruction decode logic is contained in
+{\tt \$COP\_HOME/work/ise\_decode.v}.
+This is a file generated automatically from
+{\tt \$COP\_HOME/docs/ise\_opcodes.txt}
+by
+{\tt \$COP\_HOME/bin/ise-parse-opcodes.py}.
+The generated file is pulled into the design using a {\tt `include}
+preprocessor statement.
+
 There is considerable scope in this block for optimisation in terms of
 energy efficiency. Gating the input wires to different parts of the decode
 tree and output signals depending on the decoded instruction will have a
 large impact on power expended decoding sequences of instructions.
 
-\subsection{COP Register File}
+\subsection{COP Register File ({\tt scarv\_cop\_cprs})}
 
 We use a four port register file.
 Three ports are 32-bit dedicated read-ports.
@@ -469,13 +483,10 @@ signal. Byte $i$ of \SIGREF{creg\_d\_wdata} is only written back if
 bit $i$ of the write enable signal is set.
 }{tab:sigs-regfile-write}
 
-Though many of the COP instructions are implemented using micro-code
-they can still be issued to the COP back to back.
-This means the implementation must still handle {\em RAW} hazards
-with forwarding logic, or stall for a cycle to allow all writebacks
-to occur.
+Though many of the COP instructions are implemented using multi-cycle
+FSMs they can still be issued to the COP back to back.
 
-\subsection{Packed Arithmetic Block}
+\subsection{Packed Arithmetic Block ({\tt scarv\_cop\_palu})}
 
 This block is responsible for implementing all of the packed arithmetic,
 twiddle, conditional move and bitwise instructions.
@@ -494,12 +505,16 @@ performed.
     Indicates that the block has finished executing an instruction
     and is ready for another on the next cycle.
 }
-\SIGNALI{32}{palu\_rs1}{Register operand 1}
-\SIGNALI{32}{palu\_rs2}{Register operand 2}
-\SIGNALI{32}{palu\_rs3}{Register operand 3}
+\SIGNALI{32}{gpr\_rs1 }{GPR Register operand 1}
+\SIGNALI{32}{palu\_rs1}{CPR Register operand 1}
+\SIGNALI{32}{palu\_rs2}{CPR Register operand 2}
+\SIGNALI{32}{palu\_rs3}{CPR Register operand 3}
+\SIGNALI{32}{id\_pw   }{
+    The data pack width to operate on.
+}
 \SIGNALI{32}{id\_imm}{
     Decoded instruction immediate. Includes the 16-bit operands for
-    {\tt LLI/LUI}, shift distances and the 4-bit LUT for {\tt BOP}.
+    {\tt xc.ld.hi/li}, shift distances and the 4-bit LUT for {\tt xc.bop}.
 }
 \SIGNALI{4}{id\_class}{
     Identifies which class of instruction the COP is executing.
@@ -524,7 +539,7 @@ The operation performed is specified by the control FSM.
 This includes the pack width being operated on, and the LUT used for bitwise
 operations.
 
-\subsection{Multi-precision Arithmetic Block}
+\subsection{Multi-precision Arithmetic Block ({\tt scarv\_cop\_malu})}
 
 This block is responsible for implementing all of the multi-precision
 arithmetic and comparison instructions.
@@ -545,9 +560,10 @@ sequence.
     Indicates that the MP ALU has finished executing an instruction
     and is ready for another on the next cycle.
 }
-\SIGNALI{32}{cpr\_rs1}{Register operand 1}
-\SIGNALI{32}{cpr\_rs2}{Register operand 2}
-\SIGNALI{32}{cpr\_rs3}{Register operand 3}
+\SIGNALI{32}{gpr\_rs1}{GPR Register operand 1 (for compare instructions)}
+\SIGNALI{32}{malu\_rs1}{CPR Register operand 1}
+\SIGNALI{32}{malu\_rs2}{CPR Register operand 2}
+\SIGNALI{32}{malu\_rs3}{CPR Register operand 3}
 \SIGNALI{4}{id\_class}{
     Identifies which class of instruction the COP is executing.
     The MP ALU block only looks for the Multi-precision
@@ -591,82 +607,85 @@ instruction execution.
 \toprule
 \textbf{}& \textbf{Cycle 0}& \textbf{Cycle 1}& \textbf{Cycle 2} \\
 \midrule
-ADD2.mp&
-    $tmp \ASN rs1+rs2;$\newline 
+{\tt xc.madd.2 }&
+    $tmp \ASN crs1+crs2;$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[32]$ 
  & \\
-ADD3.mp&
-   $tmp \ASN rs1 + rs2$
- & $tmp \ASN tmp + rs3;$\newline
+{\tt xc.madd.3 }&
+   $tmp \ASN crs1 + crs2$
+ & $tmp \ASN tmp + crs3;$\newline
    $rdm0\ASN tmp[31:0]$ 
  & $rdm1\ASN tmp[63:32]$ 
 \\
-SUB2.mp&
-   $tmp \ASN rs1 - rs2$ \newline
+{\tt xc.msub.2 }&
+   $tmp \ASN crs1 - crs2$ \newline
    $rdm0\ASN tmp[31:0]$ 
  & $rdm1\ASN tmp[63:32]$ 
  &
 \\
-SUB3.mp&
-   $tmp \ASN rs1 - rs2$ \newline
+{\tt xc.msub.3 }&
+   $tmp \ASN crs1 - crs2$ \newline
  &
-   $tmp \ASN tmp - rs3$ \newline
+   $tmp \ASN tmp - crs3$ \newline
    $rdm0\ASN tmp[31:0]$ 
  & $rdm1\ASN tmp[63:32]$ 
 \\
-ACC1.mp&
-    $tmp \ASN (crd1 \CONS crd0) + rs1$\newline 
+{\tt xc.macc.1 }&
+    $tmp \ASN (crd1 \CONS crd0) + crs1$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
  &
 \\
-ACC2.mp&
-    $tmp \ASN (crd1 \CONS crd0) + rs1$\newline 
- &  $tmp \ASN tmp + rs2;$\newline 
+{\tt xc.macc.2 }&
+    $tmp \ASN (crd1 \CONS crd0) + crs1$\newline 
+ &  $tmp \ASN tmp + crs2;$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
 \\
-MAC.mp &
-    $tmp \ASN rs1 * rs2$ \newline 
+{\tt xc.mmul.1 }&
+    $tmp \ASN crs1 * crs2$ \newline 
  &  
-    $tmp \ASN tmp + rs3$\newline 
+    $tmp \ASN tmp + crs3$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
 \\
-SLLI.mp&
-    $tmp \ASN (rs1 \CONS rs2) \LSH cmshamt$\newline 
-    $rdm0\ASN tmp[31:0]$ 
- &  $rdm1\ASN tmp[63:32]$ 
- &
-\\
-SLLR.mp&
-    $tmp \ASN (rs1 \CONS rs2) \LSH rs3[5:0]$\newline 
+{\tt xc.msll.i }&
+    $tmp \ASN (crs1 \CONS crs2) \LSH cmshamt$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
  &
 \\
-SRLI.mp&
-    $tmp \ASN (rs1 \CONS rs2) \RSH cmshamt$\newline 
+{\tt xc.msll }&
+    $tmp \ASN (crs1 \CONS crs2) \LSH crs3[5:0]$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
  &
 \\
-SRLR.mp&
-    $tmp \ASN (rs1 \CONS rs2) \RSH rs3[5:0]$\newline 
+{\tt xc.msrl.i }&
+    $tmp \ASN (crs1 \CONS crs2) \RSH cmshamt$\newline 
     $rdm0\ASN tmp[31:0]$ 
  &  $rdm1\ASN tmp[63:32]$ 
  &
 \\
-EQU.mp &
+{\tt xc.msrl }&
+    $tmp \ASN (crs1 \CONS crs2) \RSH crs3[5:0]$\newline 
+    $rdm0\ASN tmp[31:0]$ 
+ &  $rdm1\ASN tmp[63:32]$ 
+ &
+\\
+{\tt xc.equ }&
+    $ rd \ASN (crs2 = crs3) \IOR rs1 $
  &
  &
 \\
-LTU.mp &
+{\tt xc.mlte }&
+    $rd \ASN (crs2 = crs3) \AND (rs1 \IOR (crs2 < crs3)) $
  &
  &
 \\
-GTU.mp &
+{\tt xc.mgte }&
+    $rd \ASN (crs2 = crs3) \AND (rs1 \IOR (crs2 > crs3)) $
  &
  &
 \\
@@ -674,11 +693,13 @@ GTU.mp &
 \end{tabularx}
 \caption{Table showing what the multi-precision ALU does in each cycle
 per instruction execution. Here, $rdm0$ refers to the low word of the
-destination register pair, and $rdm1$ to the high word.}
+destination register pair, and $rdm1$ to the high word. Note that the
+comparison instructions source from the GPRs and CPRs, but sink to the
+GPRs only.}
 \label{tab:mp-alu-exec}
 \end{table}
 
-\subsection{Memory Block}
+\subsection{Memory Block ({\tt scarv\_cop\_mem})}
 
 The memory block is responsible for all instruction which access main
 memory.
@@ -729,6 +750,10 @@ listed in table \ref{tab:sigs-mem-block}.
     When set, indicates a bus error / memory fault exception.
     Valid only when \SIGREF{mem\_idone} is set.
 }
+\SIGNALO{1}{mem\_is\_store}{
+    Used in conjunction with {\tt mem\_bus\_error} and {\tt mem\_addr\_error}
+    to work out which sort of exception code/result to return to the CPU.
+}
 \SIGNALI{4}{id\_class}{
     Identifies which class of instruction the COP is executing.
     The Memory block only looks for the Load/Store and Scatter/Gather
@@ -759,6 +784,9 @@ listed in table \ref{tab:sigs-mem-block}.
 \SIGNALI{32}{cpr\_rs2}{
     Crypto source register 2.
 }
+\SIGNALI{32}{cpr\_rs3}{
+    Crypto source register 3.
+}
 \SIGNALO{4}{mem\_cpr\_rd\_ben}{
     4-bit byte write enable signal for writeback data.
 }
@@ -775,7 +803,7 @@ listed in table \ref{tab:sigs-mem-block}.
 }
 {tab:sigs-mem-block}
 
-\subsection{RNG Block}
+\subsection{RNG Block ({\tt scarv\_cop\_rng})}
 
 The RNG block acts as a random number source. It interacts with only the
 {\tt RSAMP.cr} and {\tt RSEED.cr} instructions.
@@ -788,6 +816,14 @@ The RNG block acts as a random number source. It interacts with only the
 \SIGNALO{1}{rng\_idone}{
     Indicates that the block has finished executing an instruction
     and is ready for another on the next cycle.
+}
+\SIGNALO{32}{cop\_random}{
+    Part of the status interface and absent during synthesis. Used to
+    tell verification environments the value of the last random sample.
+}
+\SIGNALO{32}{cop\_rand\_sample}{
+    Part of the status interface and absent during synthesis. Used to
+    tell verification environments a new random sample has been taken.
 }
 \SIGNALI{32}{rng\_rs1}{Register operand 1}
 \SIGNALO{ 3}{id\_class}{
@@ -811,8 +847,9 @@ The RNG block acts as a random number source. It interacts with only the
 }
 }{Interface to the RNG block}{tab:sigs-rng-block}
 
-{\bf TBD:} {\em Decide what sort of random number source we will use in
-the implementation.}
+The reference implementation of the COP uses a simple LFSR based 
+pseudo-random number generator. This is intended only as a demonstrator
+and should not be used for actual cryptographic systems!
 
 \section{Integration Guide}
 \label{sec:integration}
