--- a/docs/implementation/integration.tex
+++ b/docs/implementation/integration.tex
@@ -126,15 +126,17 @@ as they are designed to be run with the functional verification testbench.
 
 The example synthesis flow uses {\tt yosys} to create a verilog netlist of
 the combined CPU and co-processor.
-The {\tt scarv_prv_xcrypt_top} module is the top-level entity.
+The {\tt scarv\_prv\_xcrypt\_top} module is the top-level entity.
 
 \begin{lstlisting}[language=bash]
 $> make yosys_synth
 \end{lstlisting}
 
+\noindent
 Will create the netlist and put the result in 
-{\tt \$COP\_HOME/work/scarv_cop_top.v}.
+{\tt \$COP\_HOME/work/scarv\_cop\_top.v}.
 
+\noindent
 Extra report files include:
 \begin{itemize}
 \item {\tt \$COP\_HOME/work/yosys-synth.log} - 
@@ -149,5 +151,6 @@ Extra report files include:
     These must be removed before synthesis will complete.
 \end{itemize}
 
+\noindent
 The {\tt yosys} script used is very simple, and is found in
 {\tt \$COP\_HOME/flow/yosys/write-verilog.ys}.
