Documentation for the formal verification flow.
 On branch dev/ben-marshall
 Changes to be committed:
	new file:   docs/diagrams/formal-flow.dot
	new file:   docs/diagrams/formal-testbench.dot
	modified:   docs/implementation/verify.tex
	modified:   docs/shared.sty

--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -137,6 +137,11 @@
 % Co-processor name
 \newcommandx{\COP}{\ISE Co-Processor}    % TODO: remove
 
+% Tool names
+\newcommandx{\yosys}{{\tt yosys}\xspace}
+\newcommandx{\Yosys}{Yosys\xspace}
+
+
 % =============================================================================
 
 \newcommandx{\XCID}[1][1={}]{\mbox{{\sf XCrypto}\IfEq{#1}{}{}{[#1]}}\xspace}
